# whisper-TUI

./: .coverage  .gitignore  PLAN.md  README.md  kernel.errors.txt  pyproject.toml  requirements.txt  test.txt
.claude/: settings.local.json
app/: config.py  main.py  transcriber.py
app/widgets/: file_browser.py  progress.py  settings.py
audio/: Lezárás_ip2024_kun_szilvi_szuletes_csoport_zaro.txt  Lezárás_ip2024_kun_szilvi_szuletes_csoport_zaro_GPU.txt
tests/: conftest.py  test_app.py  test_config.py  test_file_browser.py  test_progress.py  test_settings.py  test_transcriber.py
whisper_tui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
